force-app/main/default/objects/Stock_Watchlist__c/Stock_Watchlist__c.object-meta.xml
<CustomObject>
    <label>Stock Watchlist</label>
    <nameField>
        <displayFormat>SW-{0000}</displayFormat>
        <label>Watchlist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Watchlists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>