force-app/main/default/objects/Stock_Watchlist__c/fields/Items_JSON__c.field-meta.xml
<CustomField>
    <fullName>Items_JSON__c</fullName>
    <label>Items JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>