force-app/main/default/objects/Stock_Watchlist__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Stock Watchlists</relationshipLabel>
    <relationshipName>Stock_Watchlists</relationshipName>
    <type>Lookup</type>
</CustomField>