force-app/main/default/objects/Stock_Watchlist__c/fields/Watchlist_Name__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Name__c</fullName>
    <label>Watchlist Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>